--- a/Depo/Depo/Presentation/SubViews/ContactsOperationView/ContactsOperationView.xib
+++ b/Depo/Depo/Presentation/SubViews/ContactsOperationView/ContactsOperationView.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactsOperationView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactsOperationView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="638"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -37,7 +38,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="dL1-vQ-6NQ" secondAttribute="bottom" constant="40" id="4h9-Fa-bZ4"/>
                         <constraint firstItem="dL1-vQ-6NQ" firstAttribute="leading" secondItem="kqs-1C-dR3" secondAttribute="leading" constant="16" id="8CR-sz-slx"/>
@@ -57,7 +58,8 @@
                     </constraints>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="kqs-1C-dR3" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Qyb-Re-4h0"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3pW-MH-215" secondAttribute="bottom" id="bmW-aW-bsd"/>
@@ -68,7 +70,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="3pW-MH-215" secondAttribute="trailing" constant="16" id="h5M-LF-grm"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="cardsStackView" destination="3pW-MH-215" id="Hro-ma-RpI"/>
                 <outlet property="headerView" destination="kqs-1C-dR3" id="68W-WP-bIR"/>
@@ -81,5 +82,8 @@
     </objects>
     <resources>
         <image name="success" width="60" height="60"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
