--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactDetail/Views/ContactInfoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactDetail/Views/ContactInfoView.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="r2C-PY-szE" customClass="ContactInfoView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="r2C-PY-szE" customClass="ContactInfoView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="36"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -30,7 +31,8 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="GkX-KM-ek2"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="GkX-KM-ek2" firstAttribute="trailing" secondItem="YIH-Sh-fMK" secondAttribute="trailing" id="1ML-C0-HBC"/>
                 <constraint firstAttribute="trailing" secondItem="Blk-MB-mcJ" secondAttribute="trailing" id="9mP-09-RpF"/>
@@ -41,7 +43,6 @@
                 <constraint firstItem="GkX-KM-ek2" firstAttribute="bottom" secondItem="YIH-Sh-fMK" secondAttribute="bottom" id="vjT-Pg-KN8"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="GkX-KM-ek2"/>
             <connections>
                 <outlet property="categoryLabel" destination="Blk-MB-mcJ" id="6u9-Dz-ZMF"/>
                 <outlet property="infoLabel" destination="YIH-Sh-fMK" id="2zH-LM-4xs"/>
@@ -49,4 +50,9 @@
             <point key="canvasLocation" x="76.811594202898561" y="127.90178571428571"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
