--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactList/Views/ContactListMainView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactList/Views/ContactListMainView.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Pj0-Ug-cHZ" customClass="ContactListMainView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Pj0-Ug-cHZ" customClass="ContactListMainView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-o5-MrL">
                     <rect key="frame" x="0.0" y="44" width="414" height="762"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                 </tableView>
                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kDM-S0-lvc">
                     <rect key="frame" x="0.0" y="784" width="414" height="22"/>
@@ -35,7 +36,7 @@
                                 <constraint firstAttribute="height" constant="1" id="3qB-me-Iwx"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihr-Hc-jYC" customClass="RoundedButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihr-Hc-jYC" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="107" y="12" width="200" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="200" id="Rsg-eZ-ASX"/>
@@ -47,7 +48,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="dmD-z0-ewl" firstAttribute="leading" secondItem="N6k-Hl-7Wz" secondAttribute="leading" id="1Mc-6C-VrO"/>
                         <constraint firstAttribute="height" constant="56" id="4xu-2h-KHw"/>
@@ -58,7 +59,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="zVu-kW-SXf"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="zVu-kW-SXf" firstAttribute="trailing" secondItem="8L8-o5-MrL" secondAttribute="trailing" id="2Yw-vu-yZu"/>
                 <constraint firstItem="N6k-Hl-7Wz" firstAttribute="bottom" secondItem="zVu-kW-SXf" secondAttribute="bottom" id="5vO-fN-5iW"/>
@@ -71,7 +73,6 @@
                 <constraint firstItem="N6k-Hl-7Wz" firstAttribute="top" secondItem="kDM-S0-lvc" secondAttribute="bottom" id="jpu-8E-7Bn"/>
                 <constraint firstItem="8L8-o5-MrL" firstAttribute="top" secondItem="zVu-kW-SXf" secondAttribute="top" id="sMa-2A-mxb"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="zVu-kW-SXf"/>
             <connections>
                 <outlet property="bottomView" destination="N6k-Hl-7Wz" id="Tle-eR-IbF"/>
                 <outlet property="restoreButton" destination="ihr-Hc-jYC" id="P23-hl-Mel"/>
@@ -81,4 +82,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="132.58928571428572"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
