--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/DeleteDuplicatesMainView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/DeleteDuplicatesMainView.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="0O5-bA-ZZ2" customClass="DeleteDuplicatesMainView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="0O5-bA-ZZ2" customClass="DeleteDuplicatesMainView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6x9-nz-eBJ">
                     <rect key="frame" x="0.0" y="44" width="414" height="762"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8UE-KR-b3Q">
                     <rect key="frame" x="0.0" y="806" width="414" height="56"/>
@@ -28,7 +29,7 @@
                                 <constraint firstAttribute="height" constant="1" id="zSW-Bd-l9j"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-GD-RP0" customClass="RoundedButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-GD-RP0" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="107" y="12" width="200" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="32" id="jpg-58-li5"/>
@@ -40,7 +41,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="ijj-8p-f3M" firstAttribute="leading" secondItem="8UE-KR-b3Q" secondAttribute="leading" id="6A3-Cr-Izj"/>
                         <constraint firstAttribute="height" constant="56" id="NMV-s6-gXR"/>
@@ -52,14 +53,15 @@
                 </view>
                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VM6-MS-ii1">
                     <rect key="frame" x="0.0" y="784" width="414" height="22"/>
+                    <viewLayoutGuide key="safeArea" id="wXc-u1-B5w"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="TC5-30-Fv1"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="wXc-u1-B5w"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vID-nS-eoC"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="8UE-KR-b3Q" firstAttribute="top" secondItem="6x9-nz-eBJ" secondAttribute="bottom" id="0LD-DO-WUG"/>
                 <constraint firstItem="VM6-MS-ii1" firstAttribute="leading" secondItem="vID-nS-eoC" secondAttribute="leading" id="9Wh-lH-LH9"/>
@@ -72,7 +74,6 @@
                 <constraint firstItem="6x9-nz-eBJ" firstAttribute="top" secondItem="vID-nS-eoC" secondAttribute="top" id="hdS-aI-uVm"/>
                 <constraint firstItem="vID-nS-eoC" firstAttribute="bottom" secondItem="8UE-KR-b3Q" secondAttribute="bottom" id="qGH-Tj-3As"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vID-nS-eoC"/>
             <connections>
                 <outlet property="bottomView" destination="8UE-KR-b3Q" id="Qn9-e9-8Q6"/>
                 <outlet property="deleteAllButton" destination="FY7-GD-RP0" id="2nM-lA-zB9"/>
@@ -82,4 +83,9 @@
             <point key="canvasLocation" x="139" y="127"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
